[package]
name = "vuke"
version = "0.8.0"
edition = "2021"
authors = ["oritwoen"]
description = "Research tool for studying vulnerable Bitcoin key generation practices"
license = "MIT"
repository = "https://github.com/oritwoen/vuke"
keywords = ["bitcoin", "security", "research", "brainwallet", "vulnerability"]
categories = ["cryptography", "command-line-utilities"]

[features]
default = []
gpu = ["wgpu", "pollster", "bytemuck"]
storage = ["parquet", "arrow"]
storage-query = ["storage", "duckdb"]

[dependencies]
# Core
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"
indicatif = "0.17"
hex = "0.4"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Crypto
sha2 = "0.10"
md-5 = "0.10"
hmac = "0.12"
secp256k1 = { version = "0.29", features = ["global-context"] }
bitcoin = { version = "0.32", features = ["rand"] }
rand_mt = "4.2"
num-bigint = "0.4"

# GPU acceleration (optional)
wgpu = { version = "24", optional = true }
pollster = { version = "0.4", optional = true }
bytemuck = { version = "1.21", features = ["derive"], optional = true }

# Storage (optional)
parquet = { version = "54", optional = true, features = ["arrow", "zstd"] }
arrow = { version = "54", optional = true }

# Query (optional)
duckdb = { version = "1.4", optional = true, features = ["bundled"] }

[dev-dependencies]
tempfile = "3.10"
criterion = { package = "codspeed-criterion-compat", version = "4.1" }

[[bin]]
name = "vuke"
path = "src/main.rs"

[[bench]]
name = "transforms"
harness = false

[[bench]]
name = "derivation"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
